# CPP_Demo

./: Makefile  README.md  azure-pipelines.yml
Greeting/: CMakeLists.txt  Greeting.cpp  Greeting.h  Makefile  README.md  conanfile.py
Living/: CMakeLists.txt  Living.cpp  Living.h  Makefile  README.md  conanfile.py  conanfile.txt
MyApp/: CMakeLists.txt  Makefile  README.md  conanfile.txt  main.cpp
